--- a/hotel-service.yml
+++ b/hotel-service.yml
@@ -1,7 +1,21 @@
 spring:
-  application:
-    name: hotel-service
+  datasource:
+    url: jdbc:postgresql://localhost:5432/hotel-service
+    username: postgres
+    password: ${DB_PASSWORD}
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
 server:
   port: 0
+
 grpc:
-  port: 9091
+  server:
+    port: 9091
